--- a/short-quotes.html
+++ b/short-quotes.html
@@ -7,6 +7,27 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <main id ="page">
+        <h1>Short quotes</h1>
+        <div classs="ex1">
+            <section>
+                <h2><p>The only way to keep your health is to eat what you don't want, drink what you don't like, and do what you'd rather not. (<span ><i>Mark Twain</i></span>)</p></h2>
+            </section>
+            <section>
+                <h3><p>Insanity: doing the same thing over and over again and expecting different results. (Albert Einstein)</p></h3>
+            </section>
+            <section>
+                <h4><p>You can only be young once. But you can always be immature. (Dave Barry)</p></h4>
+            </section>
+
+            <section>
+                <h5><p>Two things are infinite: the universe and human stupidity; and I'm not sure about the universe. (Albert Einstein)</p></h5>
+            </section>
+
+            <section><h6><i>Source: https://www.coolfunnyquotes.com/category/famous-funny-quotes/</i></h6></section>
+        </div>
+        
+
+    </main> 
 </body>
 </html>
