--- a/short-quotes.html
+++ b/short-quotes.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <main id ="page">
+    <main>
         <h1>Short quotes</h1>
         <div classs="ex1">
             <section>
